--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,27 +6,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-      
-      - name: Generate Mojo kernels
-        run: python neocore/scripts/gen_kernels.py
-      
-      - name: Run Python tests
-        run: |
+
+      # Pixi env (Modular + uvloop etc.)
+      - uses: prefix-dev/setup-pixi@v0
+      - run: |
           cd neocore
-          python -m pytest tests/
-      
-      - name: Count generated kernels
-        run: |
+          pixi install
+
+      # Generate stub kernels
+      - run: |
+          cd neocore
+          pixi run python scripts/gen_kernels.py
+
+      # Run Python tests
+      - run: |
+          cd neocore
+          pixi run pytest
+
+      # Count generated kernels
+      - run: |
           echo "Total Mojo files generated:"
           find neocore/src/kernels -name "*.mojo" | wc -l
           
@@ -36,17 +34,20 @@ jobs:
   #   steps:
   #     - uses: actions/checkout@v4
   #     
+  #     - name: Install Pixi
+  #       uses: prefix-dev/setup-pixi@v0
+  #       
   #     - name: Install Modular and Mojo
   #       run: |
-  #         curl -sSL https://get.modular.com | bash
-  #         modular auth
-  #         modular install mojo
+  #         cd neocore
+  #         pixi install
+  #         pixi run modular install mojo
   #     
   #     - name: Build Mojo kernels
   #       run: |
-  #         export PATH=$HOME/.modular/bin:$PATH
-  #         mkdir -p neocore/build
-  #         find neocore/src/kernels -name "*.mojo" -type f | while read file; do
+  #         cd neocore
+  #         mkdir -p build
+  #         find src/kernels -name "*.mojo" -type f | while read file; do
   #           echo "Building: $file"
-  #           mojo build "$file" --no-optimization -o "neocore/build/$(basename $file .mojo).mojopkg" || true
+  #           pixi run mojo build "$file" --no-optimization -o "build/$(basename $file .mojo).mojopkg" || true
   #         done
