--- a/neocore/pixi.toml
+++ b/neocore/pixi.toml
@@ -5,7 +5,8 @@ channels = [
   "https://conda.modular.com/max-nightly",
   "conda-forge"
 ]
-platforms = ["win-64"]
+platforms = ["linux-64", "osx-64", "win-64"]
 
 [dependencies]
-modular = "*"
+python = "3.11.*"
+pytest = "*"
