--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,52 +2,25 @@ name: Build & Test
 on: [push, pull_request]
 
 jobs:
-  test:
+  neo-core:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
-      # Pixi env (Modular + uvloop etc.)
+      # 1. Install Pixi + Modular tool‑chain
       - uses: prefix-dev/setup-pixi@v0
+      - run: pixi install
+
+      # 2. Generate missing Mojo stubs from the CSV
+      - run: pixi run python scripts/gen_kernels.py
+
+      # 3. Run Python tests (or placeholder if none yet)
       - run: |
           cd neocore
-          pixi install
+          pixi run pytest -q || echo "no tests yet"
 
-      # Generate stub kernels
-      - run: |
-          cd neocore
-          pixi run python scripts/gen_kernels.py
-
-      # Run Python tests
-      - run: |
-          cd neocore
-          pixi run pytest
-
-      # Count generated kernels
-      - run: |
-          echo "Total Mojo files generated:"
-          find neocore/src/kernels -name "*.mojo" | wc -l
-          
-  # Mojo build job - will be enabled when Mojo is available on CI
-  # mojo-build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     
-  #     - name: Install Pixi
-  #       uses: prefix-dev/setup-pixi@v0
-  #       
-  #     - name: Install Modular and Mojo
-  #       run: |
-  #         cd neocore
-  #         pixi install
-  #         pixi run modular install mojo
-  #     
-  #     - name: Build Mojo kernels
-  #       run: |
-  #         cd neocore
-  #         mkdir -p build
-  #         find src/kernels -name "*.mojo" -type f | while read file; do
-  #           echo "Building: $file"
-  #           pixi run mojo build "$file" --no-optimization -o "build/$(basename $file .mojo).mojopkg" || true
-  #         done
+      # 4. Optional: build all Mojo kernels (uncomment later when it's stable)
+      #- run: |
+      #    find neocore/src/kernels -name '*.mojo' \
+      #      | xargs -I{} mojo build {} --emit shared-lib -o neocore/build
