--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Pixi & Modular tool‑chain
-        uses: prefix-dev/setup-pixi@v1
+        uses: prefix-dev/setup-pixi@v0   # ← change back to v0
         with:
           cache: true
 
